# rust-clock-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: clock.rs  config.rs  countdown.rs  display.rs  font.rs  main.rs
